2000-10-10  Keiichi Suzuki  <keiichi@mdcnet.co.jp>

	* product.el (product-version-as-string): New function.
	(product-string-1): Use `product-version-as-string'.

2000-08-10  MORIOKA Tomohiko  <tomo@m17n.org>

	* poem-e20_3.el: Require `pym'.

2000-07-12  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* alist.el (vassoc): New function [to be compatible with XEmacs
	21.2.32 or later].

2000-05-25  Tanaka Akira      <akr@m17n.org>

	* README.en, README.ja: Update for CVS via SSH.

2000-05-24  Katsumi Yamaoka   <yamaoka@jpl.org>

	* pces-raw.el (encode-coding-string, decode-coding-string): Return
	a copy of string.

2000-04-25  Katsumi Yamaoka   <yamaoka@jpl.org>

	* EMU-ELS (emu-modules): Don't include `pccl-20' for XEmacs 20 and
	earlier.

2000-03-25  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* pym.el: Define edebug specs for `static-if', `static-when',
	`static-unless', `static-condition-case', `static-defconst' and
	`static-cond'.

2000-03-08  Akihiro Arisawa  <ari@atesoft.advantest.co.jp>

	* poe.el (format-time-string): Fix problem when `format' contains
	"%d" or "%D".

2000-03-04   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* poe.el (remassq,remassoc,remrassoc): Rewrite.
	(remrassq): New function.


2000-03-01  Yuuichi Teranishi  <teranisi@gohome.org>

	* APEL: Version 10.2 released.

2000-02-29  Yuuichi Teranishi  <teranisi@gohome.org>

	* poe-18.el (current-time-string): Fixed leap year's day counting bug.

2000-02-28  Katsumi Yamaoka   <yamaoka@jpl.org>

	* emu.el (enriched-encode): Do nothing for it if FSF Emacs 19.28
	and earlier or XEmacs 19.13 and earlier is used.

2000-02-25  Katsumi Yamaoka   <yamaoka@jpl.org>

	* emu.el (enriched-encode): Allow the 3rd argument ORIG-BUF for old
	Emacsen.

2000-02-21  Makoto Nakagawa  <Makoto.Nakagawa@jp.compaq.com>

	* poe.el (format-time-string): New function for Emacs 19.28 and
	earlier.
	(format-time-month-list): New constant for `format-time-string'.