@@ -1,3 +1,7 @@
+2000-10-06  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
+
+	* poe.el (require): Update `current-load-list'.
+
 2000-10-10  Keiichi Suzuki  <keiichi@mdcnet.co.jp>
 
 	* product.el (product-version-as-string): New function.
